added model and updated hyperparams

--- a/hyperparams.yaml
+++ b/hyperparams.yaml
@@ -71,18 +71,18 @@ coverage_penalty: 1.5
 temperature: 1.25
 
 
-compute_features: &id005 !new:speechbrain.lobes.features.Fbank
+compute_features: !new:speechbrain.lobes.features.Fbank
   sample_rate: 16000
   n_fft: 800
   n_mels: 40
 
-mean_var_norm: &id007 !new:speechbrain.processing.features.InputNormalization
+mean_var_norm: !new:speechbrain.processing.features.InputNormalization
 
 
   norm_type: global
 
 
-encoder: &id006 !new:model.TemporalConvNet
+encoder: !new:model.TemporalConvNet
   num_inputs: 40
   num_channels: [768, 768, 768, 768]
   num_classes: 500
@@ -91,7 +91,7 @@ encoder: &id006 !new:model.TemporalConvNet
 
 
 # Attention-based RNN decoder.
-decoder: &id002 !new:speechbrain.nnet.RNN.AttentionalRNNDecoder
+decoder: !new:speechbrain.nnet.RNN.AttentionalRNNDecoder
   enc_dim: 768
   input_size: 128
   rnn_type: gru
@@ -107,12 +107,12 @@ decoder: &id002 !new:speechbrain.nnet.RNN.AttentionalRNNDecoder
 
 
 # Embedding (from indexes to an embedding space of dimension emb_size).
-embedding: &id001 !new:speechbrain.nnet.embedding.Embedding
+embedding: !new:speechbrain.nnet.embedding.Embedding
   num_embeddings: 500
   embedding_dim: 128
 
 
-ctc_lin: &id004 !new:speechbrain.nnet.linear.Linear
+ctc_lin: !new:speechbrain.nnet.linear.Linear
 
 
 # save the model
@@ -121,7 +121,7 @@ ctc_lin: &id004 !new:speechbrain.nnet.linear.Linear
 
 
 # Linear transformation on the top of the decoder.
-seq_lin: &id003 !new:speechbrain.nnet.linear.Linear
+seq_lin: !new:speechbrain.nnet.linear.Linear
   input_size: 512
   n_neurons: 500
 
@@ -139,13 +139,13 @@ opt_class: !name:torch.optim.Adam
   lr: 0.0001
 
 
-lr_annealing: &id009 !new:speechbrain.nnet.schedulers.NewBobScheduler
+lr_annealing: !new:speechbrain.nnet.schedulers.NewBobScheduler
   initial_value: 0.0001
   improvement_threshold: 0.0025
   annealing_factor: 0.8
   patient: 100
 
-epoch_counter: &id010 !new:speechbrain.utils.epoch_loop.EpochCounter
+epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounter
   limit: 100
 
 
@@ -162,63 +162,64 @@ cer_computer: !name:speechbrain.utils.metric_stats.ErrorRateStats
 
 # ======================= DECODING ================
 valid_search: !new:speechbrain.decoders.S2SRNNBeamSearcher
-  embedding: *id001
-  decoder: *id002
-  linear: *id003
-  ctc_linear: *id004
-  bos_index: 0
-  eos_index: 0
-  blank_index: 0
-  min_decode_ratio: 0.0
-  max_decode_ratio: 1.0
-  beam_size: 1
-  eos_threshold: 1.5
-  using_max_attn_shift: true
-  max_attn_shift: 240
-  coverage_penalty: 1.5
-  temperature: 1.25
+    embedding: !ref <embedding>
+    decoder: !ref <decoder>
+    linear: !ref <seq_lin>
+    ctc_linear: !ref <ctc_lin>
+    bos_index: !ref <bos_index>
+    eos_index: !ref <eos_index>
+    blank_index: !ref <blank_index>
+    min_decode_ratio: !ref <min_decode_ratio>
+    max_decode_ratio: !ref <max_decode_ratio>
+    beam_size: !ref <valid_beam_size>
+    eos_threshold: !ref <eos_threshold>
+    using_max_attn_shift: !ref <using_max_attn_shift>
+    max_attn_shift: !ref <max_attn_shift>
+    coverage_penalty: !ref <coverage_penalty>
+    temperature: !ref <temperature>
 
 # The final decoding on the test set can be more computationally demanding.
 # In this case, we use the LM + CTC probabilities during decoding as well.
 # Please, remove this part if you need a faster decoder.
 test_search: !new:speechbrain.decoders.S2SRNNBeamSearcher
-  embedding: *id001
-  decoder: *id002
-  linear: *id003
-  ctc_linear: *id004
-  bos_index: 0
-  eos_index: 0
-  blank_index: 0
-  min_decode_ratio: 0.0
-  max_decode_ratio: 1.0
-  beam_size: 80
-  eos_threshold: 1.5
-  using_max_attn_shift: true
-  max_attn_shift: 240
-  coverage_penalty: 1.5
-  ctc_weight: 0.0
-  temperature: 1.25
-
+    embedding: !ref <embedding>
+    decoder: !ref <decoder>
+    linear: !ref <seq_lin>
+    ctc_linear: !ref <ctc_lin>
+    bos_index: !ref <bos_index>
+    eos_index: !ref <eos_index>
+    blank_index: !ref <blank_index>
+    min_decode_ratio: !ref <min_decode_ratio>
+    max_decode_ratio: !ref <max_decode_ratio>
+    beam_size: !ref <test_beam_size>
+    eos_threshold: !ref <eos_threshold>
+    using_max_attn_shift: !ref <using_max_attn_shift>
+    max_attn_shift: !ref <max_attn_shift>
+    coverage_penalty: !ref <coverage_penalty>
+    ctc_weight: !ref <ctc_weight_decode>
+    temperature: !ref <temperature>
 
 
 modules:
-  compute_features: *id005
-  encoder: *id006
-  embedding: *id001
-  decoder: *id002
-  seq_lin: *id003
-  ctc_lin: *id004
-  mean_var_norm: *id007
-model: &id008 !new:torch.nn.ModuleList
-- - *id006
-  - *id001
-  - *id002
-  - *id005
-  - *id003
-  - *id004
+  compute_features: !ref <compute_features>
+  encoder: !ref <encoder>
+  embedding: !ref <embedding>
+  decoder: !ref <decoder>
+  seq_lin: !ref <seq_lin>
+  ctc_lin: !ref <ctc_lin>
+  mean_var_norm: !ref <mean_var_norm>
+
+model: !new:torch.nn.ModuleList
+- - !ref <encoder>
+  - !ref <embedding>
+  - !ref <decoder>
+  - !ref <seq_lin>
+  - !ref <ctc_lin>
+
+
 checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
   checkpoints_dir: output_folder
   recoverables:
-    model: *id008
-    scheduler: *id009
-    counter: *id010
+    model: !ref <model>
+    scheduler: !ref <lr_annealing>
+    counter: !ref <epoch_counter>
